syntax = "proto3";
package com.antigravity;

// No imports needed

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "AssetManagementProto";

message ListAssetsRequest {
  // Empty request
}

message UploadAssetRequest {
  string name = 1;
  string type = 2; // "image" or "sound"
  bytes data = 3;
}

message DeleteAssetRequest {
  string id = 1;
}

message RenameAssetRequest {
  string id = 1;
  string new_name = 2;
}
